@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Sun, 13 Oct 2024 13:14:26 +0800</lastBuildDate>
+  <lastBuildDate>Sun, 13 Oct 2024 13:15:35 +0800</lastBuildDate>
 <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
   <link>https://www.famechos.me/news/KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單.html</link>
@@ -140,5 +140,11 @@ YG娛樂旗下的新人女團BABYMONSTER（韓語：베이비몬스터）將於1
   <description>&lt;h2&gt;韓江的生平大事記&lt;/h2&gt;。。韓國作家韓江獲得諾貝爾文學獎，以下是她的生平重大事件時間表：。。&lt;ul&gt;...</description>
   <category>K-Pop</category>
   <pubDate>Sun, 13 Oct 2024 13:14:26 +0800</pubDate>
+</item><item>
+  <title>韓國文壇歷史性一刻！首位韓國人韓江奪諾貝爾文學獎：這份榮耀不只屬於我</title>
+  <link>https://www.famechos.me/news/韓國文壇歷史性一刻！首位韓國人韓江奪諾貝爾文學獎：這份榮耀不只屬於我.html</link>
+  <description>&lt;h2&gt;韓江對諾貝爾文學獎獲獎祝賀消息表示深深感謝&lt;/h2&gt;。。&lt;p&gt;韓國小說家韓江最近成為首位獲得諾貝爾文學獎的韓國人，她在獲獎後表達了深深的感謝。&lt;/p&gt;。...</description>
+  <category>K-Pop</category>
+  <pubDate>Sun, 13 Oct 2024 13:15:35 +0800</pubDate>
 </item></channel>
 </rss>
