@@ -176,4 +176,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/韓國文壇歷史性一刻！首位韓國人韓江奪諾貝爾文學獎：這份榮耀不只屬於我.html</ns0:loc>
+    <ns0:lastmod>2024-10-13T13:15:35+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
