@@ -26,3 +26,4 @@ https://www.koreaherald.com/view.php?ud=20241002050690
 https://www.koreaherald.com/view.php?ud=20241008050463
 https://www.koreaherald.com/view.php?ud=20241008050665
 https://en.yna.co.kr/view/AEN20241011007100315?section=culture/k-pop&input=rss
+https://en.yna.co.kr/view/AEN20241010012000315?section=culture/k-pop&input=rss
